Fixes menu overlaping logo

--- a/src/app/shared/menu/menu.component.scss
+++ b/src/app/shared/menu/menu.component.scss
@@ -7,6 +7,10 @@
   height: 100%;
   border-radius: 0;
 
+  .mat-list {
+    padding-top: 96px;
+  }
+
 
   &__header {
     display: grid;
@@ -50,12 +54,6 @@
 
       .mat-display-3 {
         margin-bottom: 0;
-      }
-
-      a.active {
-        text-transform: capitalize;
-        text-decoration: underline;
-        font-style: italic;
       }
 
       @media (min-width: $breakpoint-tablet) {
