--- a/src/app/shared/project-cover/project-cover.component.scss
+++ b/src/app/shared/project-cover/project-cover.component.scss
@@ -19,6 +19,8 @@
 
       h1.mat-display-4 {
         font-weight: 500;
+        -webkit-hyphens: auto;
+        hyphens: auto;
       }
     }
 
